# pyXsurf

./: .gitignore  .pypirc  .readthedocs.yml  00_core.ipynb  CITATION.cff  DEMO_GUIDE.md  MANIFEST.in  README.md  README.rst  README_developers.rst  RELEASE_PROCEDURE.md  _quarto.yml  developdocs.code-workspace  index.ipynb  make_build.bat  meta.yaml  notepad++.session  pyproject.toml  readme.txt  requirements.txt  settings.ini  setup.cfg  setup.py  test.bat  test_find.py  update_lib.py  workspace.code-workspace_developdocs.code-workspace  xpyproject.toml  xrequirements.txt  xsetup.cfg
.spyproject/: workspace.ini
_docs/: index.html  robots.txt
abandoned/: CQTclust.py
dataIO/: __init__.py  any_is_none.py  arrays.py  beep.py  dicts.py  files.py  outliers.py  read_pars_from_namelist.py  roi.py  running_mean.py  span.py  superlist.py
docs/: .readthedocs.yaml  develop.yaml  make.bat  requirements.txt
docs.egg-info/: PKG-INFO  SOURCES.txt
licenses/: LICENSE.rst
notebooks/: Basics_programming.ipynb  Python Programming Notes.ipynb  Untitled.ipynb  ipnbdoctest.py  plotting_styles.py  pySurf_nb_demo.ipynb  pycroscopy_plot_fft_2d_filtering.ipynb
plotting/: FastImshow.py  __init__.py  backends.py  captions.py  fignumber.py  multiplots.py  plot_circle_ROI.py  plot_positions.py  plot_rect_ROI.py  scale.py  test_rezoom.py  viewlims.py
pyGeo3D/: fit_3D_plane.py  intersect_plane_line.py  ostruzione.py  sols.txt
pyProfile/: __init__.py  makenicePSDplots.py  profile.py  profile_class.py  psd.py
pySurf/: _instrument_reader.py  affine2D (1).py  affine2D.py  data2D (1).py  data2D (2).py  data2D.py  data2D_class (1).py  data2D_class.py  data2D_class.py.bak  data2D_class_v1.1.py.bak  data2D_class_v1.py.bak  fit_cylinder.py  fit_cylinder.py.bak  format_reader.py  instrumentReader.py  points (1).py  points.py  points.py.bak  points_.py  psd2d.py  stress_compensation.py  testSurfaces.py
pyXsurf.egg-info/: PKG-INFO  (+2 more)
(+822 files in other folders)
