[project]
name = "pyXsurf"
description = "Python library for X-Ray Optics, Metrology Data Analysis and Telescopes Design."
authors = [{ name = "Vincenzo Cotroneo", email = "vincenzo.cotroneo@inaf.it" }]
readme = "README.rst"
requires-python = ">=3.7"
dynamic = ["version"]
dependencies = [
    "astropy",
    "importlib_resources",
    "matplotlib",
    "numpy",
    "scipy",
]

[project.optional-dependencies]
dev = ["pytest", "testbook", "ipykernel", "sphinx"]


[tool.setuptools]
packages = ["pyXsurf"]

[tool.setuptools.dynamic]
version = { file = "VERSION" }

[tool.setuptools.package-data]
"pyXsurf.data" = ["*"]
"pyXsurf.pyProfile.data" = ["*"]
"pyXsurf.pySurf.data" = ["*"]
